Improve dark colors

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -6,6 +6,7 @@
 
 .dark {
   --vp-c-bg: #1E1E20;
+  --vp-c-bg-soft: #262629;
   --vp-c-brand-1: #FEC10E;
   --vp-c-brand-2: #6EB3E4;
   --vp-c-brand-3: #CC9900;
